name:                simple-jwt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple-jwt#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Coffey
maintainer:          chris@collegevine.com
copyright:           2017 Chris Coffey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JWT
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , time
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring
                     , text 
                     , cryptonite 
                     , containers 
                     , unordered-containers 
                     , lens 
                     , aeson 
  default-language:    Haskell2010

test-suite simple-jwt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-jwt
                     , mtl
                     , time
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring
                     , text 
                     , cryptonite 
                     , containers 
                     , unordered-containers 
                     , lens 
                     , aeson 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple-jwt
